# ShopPoint

./: .gitignore  docker-compose.yml  pyproject.toml
microservices/auth-service/: Dockerfile  alembic.ini  go.mod  go.sum  main.py  pyproject.toml
microservices/auth-service/app/backend/: __init__.py  db.py  redis.py
microservices/auth-service/app/config/: config.py
microservices/auth-service/app/core/: __init__.py  core_auth.py  core_dependencies.py  core_jwt.py
microservices/auth-service/app/migrations/: env.py
microservices/auth-service/app/models/: __init__.py  model_auth_user.py  model_auth_user_role.py  model_role.py
microservices/auth-service/app/router/: router_role.py  router_user.py
microservices/auth-service/app/schemas/: __init__.py  schema_jwt.py  schema_role.py  schema_user.py
microservices/auth-service/app/service/: __init__.py  service_role.py  service_user.py
microservices/auth-service/cmd/: main.go
microservices/auth-service/config/: config.go
microservices/auth-service/config/keys/: private.pem  public.pem
microservices/auth-service/internal/app/: app.go
microservices/auth-service/internal/handler/: user_handler.go
microservices/auth-service/internal/model/: user.go
microservices/auth-service/internal/repository/: user_repository.go
microservices/auth-service/internal/schema/: user_schema.go
microservices/auth-service/internal/service/: user_service.go
microservices/auth-service/migrate/: migrate.up.go
microservices/auth-service/migrate/versions/: 20250321213820_init.down.sql  20250321213820_init.up.sql
microservices/auth-service/pkg/redis/: client.go  repository.go
microservices/auth-service/pkg/response/: decode.go  handlebody.go  response.go  validate.go
microservices/auth-service/pkg/storage/: db.go
microservices/auth-service/proto/v1/: role.proto  user.proto  user_roles.proto
microservices/product-service/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
microservices/product-service/app/backend/: S3.py  __init__.py  db.py
microservices/product-service/app/config/: config.py
microservices/product-service/app/core/: __init__.py  core_dependencies.py  core_utils.py  dependencies.py  utils.py
microservices/product-service/app/migrations/: env.py
microservices/product-service/app/models/: __init__.py  model_categories.py  model_product.py  model_product_categories.py  model_product_images.py  product_categories.py  product_images.py  products.py
microservices/product-service/app/router/: product.py  (+3 more)
microservices/user-service/: Dockerfile  alembic.ini  main.py  pyproject.toml
(+129 files in other folders)
